apex-di/main/default/objects/DIRegistry__mdt/DIRegistry__mdt.object-meta.xml
<CustomObject>
    <label>DI Registry</label>
    <pluralLabel>DI Registry</pluralLabel>
</CustomObject>