apex-di/main/default/objects/DIRegistry__mdt/fields/ImplementationByFactory__c.field-meta.xml
<CustomField>
    <fullName>ImplementationByFactory__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText
  >Checked when the implementation type is a service factory.</inlineHelpText>
    <label>Implementation by Factory</label>
    <type>Checkbox</type>
</CustomField>