apex-di/main/default/objects/DIRegistry__mdt/fields/ImplementationClassName__c.field-meta.xml
<CustomField>
    <fullName>ImplementationClassName__c</fullName>
    <label>Implementation Class Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>