apex-di/main/default/objects/DIRegistry__mdt/fields/ImplementationClassNamespace__c.field-meta.xml
<CustomField>
    <fullName>ImplementationClassNamespace__c</fullName>
    <label>Implementation Class Namespace</label>
    <length>15</length>
    <type>Text</type>
</CustomField>