apex-di/main/default/objects/DIRegistry__mdt/fields/ImplementationName__c.field-meta.xml
<CustomField>
    <fullName>ImplementationName__c</fullName>
    <label>Implementation Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>