apex-di/main/default/objects/DIRegistry__mdt/fields/ServiceClassName__c.field-meta.xml
<CustomField>
    <fullName>ServiceClassName__c</fullName>
    <label>Service Class Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>