apex-di/main/default/objects/DIRegistry__mdt/fields/ServiceClassNamespace__c.field-meta.xml
<CustomField>
    <fullName>ServiceClassNamespace__c</fullName>
    <label>Service Class Namespace</label>
    <length>15</length>
    <type>Text</type>
</CustomField>