apex-di/main/default/objects/DIRegistry__mdt/fields/ServiceGroup__c.field-meta.xml
<CustomField>
    <fullName>ServiceGroup__c</fullName>
    <inlineHelpText>i.e. GroupName::SubGroupName::SubGroupName</inlineHelpText>
    <label>Service Group</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>