apex-di/main/default/objects/DIRegistry__mdt/fields/ServiceLifetime__c.field-meta.xml
<CustomField>
    <fullName>ServiceLifetime__c</fullName>
    <label>Service Lifetime</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transient</fullName>
                <default>true</default>
                <label>Transient</label>
            </value>
            <value>
                <fullName>Scoped</fullName>
            </value>
            <value>
                <fullName>Singleton</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>