apex-di/main/default/objects/DIRegistry__mdt/fields/ServiceName__c.field-meta.xml
<CustomField>
    <fullName>ServiceName__c</fullName>
    <label>Service Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>