apex-di/main/default/objects/DIRegistry__mdt/listViews/All_Services.listView-meta.xml
<ListView>
    <fullName>All_Services</fullName>
    <columns>MasterLabel</columns>
    <columns>ServiceGroup__c</columns>
    <columns>ServiceLifetime__c</columns>
    <columns>ServiceName__c</columns>
    <columns>ImplementationName__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Services</label>
</ListView>